// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`First name render a disabled field 1`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           disabled
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;

exports[`First name render a disabled field 2`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           disabled
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;

exports[`First name render a field with default settings 1`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;

exports[`First name render a field with default settings 2`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;

exports[`First name render a field with error 1`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;

exports[`First name render a field with error 2`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;

exports[`First name render a field with value 1`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value="some value"
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;

exports[`First name render a field with value 2`] = `
<label id="firstNameField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      First name
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="firstName"
           name="firstName"
           placeholder="Enter your first name"
           autocomplete="given-name"
           data-trackable="field-name"
           aria-required="true"
           required
           value="some value"
    >
  </span>
  <span class="o-forms-input__error">
    Please enter your first name
  </span>
</label>
`;
